Thu May 19 20:18:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/rtps.mpc:

          Install headers and library.

Thu May 19 19:44:27 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Fixed broken regex patterns in add_lib_path.

Thu May 19 19:38:05 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          Cleaned up the script.  Use Getopt::Long to allow repeated arguments
          with cumulative effect (-l listone.lst -l listtwo.lst).

        * dds/DCPS/RTPS/md5.h:

          Fuzz.

Thu May 19 18:49:19 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/packet.cpp:

          Reimplemented use of a Wireshark 1.4.x-specific function to
          be compatible with older implementations.

Thu May 19 17:51:20 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Typo fix in comment.

        * dds/DCPS/RTPS/BaseMessageUtils.h:

          Use const for swap_bytes.
          Cast to avoid warnings on 64-bit platforms.

        * tools/dissector/packet.cpp:

          Cast to avoid warnings on 64-bit platforms.

Thu May 19 16:05:34 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Add the "." path (ACE 5.5a does not do so).

        * dds/DCPS/RTPS/BaseMessageUtils.h:

          Change to byte ordering macros compatible with TAO 1.5a.

        * tests/DCPS/KeyTest/run_test.pl:

          Fix a typo caused by the fuzz cleanup.

Thu May 19 15:56:10 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportQueueElement.cpp:

          Fix for SunCC.

        * dds/DCPS/transport/udp/UdpReceiveStrategy.h:

          Need to override both overloads of check_header().

Thu May 19 15:36:41 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/transport/framework/TransportHeader.inl: