@@ -38,7 +38,7 @@ UDP transport.</p>
 
 <h2>Customizing a Transport</h2>
 
-<p>Each transport can be further customize through its context menu, again through the add Child menu.</p>
+<p>Each transport can be further customized through its context menu, again through the add Child menu.</p>
 
 <h2>Default Customization Content</h2>
 
@@ -46,7 +46,7 @@ UDP transport.</p>
 from the .opendds model file selected.  It creates an instance named default with offset of 0 \
 and an empty transport with each of the IDs referenced in the model file.  </p>
 
-<p>At a minimum, specific configurations should be added to these these generic transports in 
+<p>At a minimum, specific configurations should be added to these generic transports in 
 order to select the correct transport type.</p>
 
 </body>
