@@ -45,6 +45,6 @@ target directory can be typed into the Target Directory text box.</div>
 
 <h3>Generate All Button</h3>
 
-<p>The generate all button is a shortcut for hitting each pressing each generate button.</p>
+<p>The generate all button is a shortcut for hitting each generate button.</p>
 </body>
 </html>
