@@ -16,7 +16,7 @@
 
   <p>In the course of working with the various libraries in an
   OpenDDS model, you may find yourself with numerous diagram edit
-  windows open. To make it easy to move and forth between these
+  windows open. To make it easy to move back and forth between these
   windows you can use the Back and Forward buttons on the Eclipse
   toolbar that are shown below.</p>
 
