@@ -16,7 +16,7 @@
 
   <p>After the selection of a new OpenDDS Diagram you will then be
   presented with an editor that consists of a canvas and a palette
-  of "libraries" and a Package that can dragged onto the canvas. An example of
+  of "libraries" and a Package that can be dragged onto the canvas. An example of
   this editor is shown in the following figure.</p><img alt=
   "Creating new OpenDDS diagram" src=
   "../../images/new_diagram_editor.png">
