@@ -15,7 +15,7 @@
   <h2>Using Packages</h2>
 
   <p>Although you can partition libraries by placing them in
-  separate model files, packages provides a way to organize
+  separate model files, packages provide a way to organize
   libraries within the same model file. Packages can be
   hierarchical and can contain libraries or other
   packages:</p><img alt="Packages" src=
