@@ -17,7 +17,7 @@
   <p>This reference section defines the Quality of Service policies
   used by OpenDDS.</p>
 
-  <p>These definitions were extracted the OpenDDS Developer's Guide available at the <a href=
+  <p>These definitions were extracted from the OpenDDS Developer's Guide available at the <a href=
   "http://download.ociweb.com/OpenDDS/">OpenDDS download
   page</a>. See this guide for more information on these policies and how they are used
   in OpenDDS.</p>
